Update test stage to have permissions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - master
 
-permissions:
-  contents: read
-  security-events: write
+permissions: write-all
 
 jobs:
   test:
@@ -23,6 +21,8 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   build:
     runs-on: ubuntu-latest
