--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Clean Gatsby cache
+        run: npm run clean
+
       - name: Build the app
         run: npm run build
 
